feat: add multiple RPC endpoints support and currencies API

--- a/.env.core-chain
+++ b/.env.core-chain
@@ -15,7 +15,7 @@ REDIS_URL=redis://localhost:6380
 # =============================================================================
 
 # Core chain polling (reduced to avoid RPC overload)
-SCALEX_CORE_DEVNET_POLLING_INTERVAL=1000
+SCALEX_CORE_DEVNET_POLLING_INTERVAL=2000
 FAUCET_POLLING_INTERVAL=2000
 
 # Core chain request limits (reduced to avoid RPC overload)
@@ -33,7 +33,7 @@ MAX_REQUESTS_PER_SECOND=10
 # Local Anvil (Main Chain - 31337)
 CHAIN_ID=84532
 PONDER_RPC_URL=https://base-sepolia.rpc.hypersync.xyz
-CORE_DEVNET_ENDPOINT=https://base-sepolia.rpc.hypersync.xyz
+CORE_DEVNET_ENDPOINT=
 
 # =============================================================================
 # CONTRACT ADDRESSES - CORE CHAIN (ScaleX-CORE_DEVNET - 31337) ONLY
