--- a/api/.env.example
+++ b/api/.env.example
@@ -6,6 +6,9 @@
 DATABASE_URL=postgresql://username:password@localhost:5432/database_name
 DATABASE_CA=/path/to/ca-certificate.pem
 
+# Ponder Database Configuration (for currencies, etc.)
+PONDER_DATABASE_URL=postgresql://postgres:password@localhost:5433/ponder_core
+
 # Server Configuration
 PORT=3000
 NODE_ENV=development
