--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.4.0",
     "@elysiajs/swagger": "^1.3.1",
     "@sinclair/typebox": "^0.34.40",
     "@types/pg": "^8.15.5",
